# dynRAS

./: pyproject.toml
DynRAS_model/: class_definition.py  solver.py  test.py
src/DynRAS/: ChemODE_BIO.py  ChemODE_Fish.py  class_definition.py  params.py  solver.py  test.py
src/DynRAS/figure_generation/: Jafari_et_al_2024.py
